k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-demo-service
spec:
  type: LoadBalancer
  selector:
    app: angular-demo-app
  ports:
    - port: 80
      targetPort: 80
