k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ec2-18-211-214-106.compute-1.amazonaws.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: angular-demo-service
              port:
                number: 80
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: spring-service
              port:
                number: 8080
